--- a/docs/modules/ROOT/pages/cops.adoc
+++ b/docs/modules/ROOT/pages/cops.adoc
@@ -237,6 +237,7 @@ In the following section you find all available cops:
 * xref:cops_lint.adoc#lintconstantreassignment[Lint/ConstantReassignment]
 * xref:cops_lint.adoc#lintconstantresolution[Lint/ConstantResolution]
 * xref:cops_lint.adoc#lintcopdirectivesyntax[Lint/CopDirectiveSyntax]
+* xref:cops_lint.adoc#lintdatadefineoverride[Lint/DataDefineOverride]
 * xref:cops_lint.adoc#lintdebugger[Lint/Debugger]
 * xref:cops_lint.adoc#lintdeprecatedclassmethods[Lint/DeprecatedClassMethods]
 * xref:cops_lint.adoc#lintdeprecatedconstants[Lint/DeprecatedConstants]
@@ -354,6 +355,7 @@ In the following section you find all available cops:
 * xref:cops_lint.adoc#lintunmodifiedreduceaccumulator[Lint/UnmodifiedReduceAccumulator]
 * xref:cops_lint.adoc#lintunreachablecode[Lint/UnreachableCode]
 * xref:cops_lint.adoc#lintunreachableloop[Lint/UnreachableLoop]
+* xref:cops_lint.adoc#lintunreachablepatternbranch[Lint/UnreachablePatternBranch]
 * xref:cops_lint.adoc#lintunusedblockargument[Lint/UnusedBlockArgument]
 * xref:cops_lint.adoc#lintunusedmethodargument[Lint/UnusedMethodArgument]
 * xref:cops_lint.adoc#linturiescapeunescape[Lint/UriEscapeUnescape]
@@ -505,6 +507,7 @@ In the following section you find all available cops:
 * xref:cops_style.adoc#stylefetchenvvar[Style/FetchEnvVar]
 * xref:cops_style.adoc#stylefileempty[Style/FileEmpty]
 * xref:cops_style.adoc#stylefilenull[Style/FileNull]
+* xref:cops_style.adoc#stylefileopen[Style/FileOpen]
 * xref:cops_style.adoc#stylefileread[Style/FileRead]
 * xref:cops_style.adoc#stylefiletouch[Style/FileTouch]
 * xref:cops_style.adoc#stylefilewrite[Style/FileWrite]
@@ -550,6 +553,7 @@ In the following section you find all available cops:
 * xref:cops_style.adoc#stylemagiccommentformat[Style/MagicCommentFormat]
 * xref:cops_style.adoc#stylemapcompactwithconditionalblock[Style/MapCompactWithConditionalBlock]
 * xref:cops_style.adoc#stylemapintoarray[Style/MapIntoArray]
+* xref:cops_style.adoc#stylemapjoin[Style/MapJoin]
 * xref:cops_style.adoc#stylemaptohash[Style/MapToHash]
 * xref:cops_style.adoc#stylemaptoset[Style/MapToSet]
 * xref:cops_style.adoc#stylemethodcallwithargsparentheses[Style/MethodCallWithArgsParentheses]
@@ -594,6 +598,7 @@ In the following section you find all available cops:
 * xref:cops_style.adoc#stylenumericliterals[Style/NumericLiterals]
 * xref:cops_style.adoc#stylenumericpredicate[Style/NumericPredicate]
 * xref:cops_style.adoc#styleobjectthen[Style/ObjectThen]
+* xref:cops_style.adoc#styleoneclassperfile[Style/OneClassPerFile]
 * xref:cops_style.adoc#styleonelineconditional[Style/OneLineConditional]
 * xref:cops_style.adoc#styleopenstructuse[Style/OpenStructUse]
 * xref:cops_style.adoc#styleoperatormethodcall[Style/OperatorMethodCall]
@@ -603,14 +608,17 @@ In the following section you find all available cops:
 * xref:cops_style.adoc#styleorassignment[Style/OrAssignment]
 * xref:cops_style.adoc#styleparallelassignment[Style/ParallelAssignment]
 * xref:cops_style.adoc#styleparenthesesaroundcondition[Style/ParenthesesAroundCondition]
+* xref:cops_style.adoc#stylepartitioninsteadofdoubleselect[Style/PartitionInsteadOfDoubleSelect]
 * xref:cops_style.adoc#stylepercentliteraldelimiters[Style/PercentLiteralDelimiters]
 * xref:cops_style.adoc#stylepercentqliterals[Style/PercentQLiterals]
 * xref:cops_style.adoc#styleperlbackrefs[Style/PerlBackrefs]
+* xref:cops_style.adoc#stylepredicatewithkind[Style/PredicateWithKind]
 * xref:cops_style.adoc#stylepreferredhashmethods[Style/PreferredHashMethods]
 * xref:cops_style.adoc#styleproc[Style/Proc]
 * xref:cops_style.adoc#stylequotedsymbols[Style/QuotedSymbols]
 * xref:cops_style.adoc#styleraiseargs[Style/RaiseArgs]
 * xref:cops_style.adoc#stylerandomwithoffset[Style/RandomWithOffset]
+* xref:cops_style.adoc#stylereducetohash[Style/ReduceToHash]
 * xref:cops_style.adoc#styleredundantargument[Style/RedundantArgument]
 * xref:cops_style.adoc#styleredundantarrayconstructor[Style/RedundantArrayConstructor]
 * xref:cops_style.adoc#styleredundantarrayflatten[Style/RedundantArrayFlatten]
@@ -634,6 +642,7 @@ In the following section you find all available cops:
 * xref:cops_style.adoc#styleredundantinterpolation[Style/RedundantInterpolation]
 * xref:cops_style.adoc#styleredundantinterpolationunfreeze[Style/RedundantInterpolationUnfreeze]
 * xref:cops_style.adoc#styleredundantlinecontinuation[Style/RedundantLineContinuation]
+* xref:cops_style.adoc#styleredundantminmaxby[Style/RedundantMinMaxBy]
 * xref:cops_style.adoc#styleredundantparentheses[Style/RedundantParentheses]
 * xref:cops_style.adoc#styleredundantpercentq[Style/RedundantPercentQ]
 * xref:cops_style.adoc#styleredundantregexpargument[Style/RedundantRegexpArgument]
@@ -647,6 +656,7 @@ In the following section you find all available cops:
 * xref:cops_style.adoc#styleredundantsort[Style/RedundantSort]
 * xref:cops_style.adoc#styleredundantsortby[Style/RedundantSortBy]
 * xref:cops_style.adoc#styleredundantstringescape[Style/RedundantStringEscape]
+* xref:cops_style.adoc#styleredundantstructkeywordinit[Style/RedundantStructKeywordInit]
 * xref:cops_style.adoc#styleregexpliteral[Style/RegexpLiteral]
 * xref:cops_style.adoc#stylerequireorder[Style/RequireOrder]
 * xref:cops_style.adoc#stylerescuemodifier[Style/RescueModifier]
@@ -657,6 +667,8 @@ In the following section you find all available cops:
 * xref:cops_style.adoc#stylesafenavigation[Style/SafeNavigation]
 * xref:cops_style.adoc#stylesafenavigationchainlength[Style/SafeNavigationChainLength]
 * xref:cops_style.adoc#stylesample[Style/Sample]
+* xref:cops_style.adoc#styleselectbykind[Style/SelectByKind]
+* xref:cops_style.adoc#styleselectbyrange[Style/SelectByRange]
 * xref:cops_style.adoc#styleselectbyregexp[Style/SelectByRegexp]
 * xref:cops_style.adoc#styleselfassignment[Style/SelfAssignment]
 * xref:cops_style.adoc#stylesemicolon[Style/Semicolon]
@@ -687,6 +699,7 @@ In the following section you find all available cops:
 * xref:cops_style.adoc#stylesymbolarray[Style/SymbolArray]
 * xref:cops_style.adoc#stylesymbolliteral[Style/SymbolLiteral]
 * xref:cops_style.adoc#stylesymbolproc[Style/SymbolProc]
+* xref:cops_style.adoc#styletallymethod[Style/TallyMethod]
 * xref:cops_style.adoc#styleternaryparentheses[Style/TernaryParentheses]
 * xref:cops_style.adoc#styletoplevelmethoddefinition[Style/TopLevelMethodDefinition]
 * xref:cops_style.adoc#styletrailingbodyonclass[Style/TrailingBodyOnClass]
